# Hamming-Archivator

./: CMakeLists.txt  HamArc.cpp  HamArc.h  HammingReader.cpp  HammingReader.h  HammingWriter.cpp  HammingWriter.h  README.md  TArgumentParser.cpp  TArgumentParser.h  main.cpp
